Import of CMS/Attribute-Boolean-v1.0.6 from CPAN.
gitpan-cpan-distribution: Attribute-Boolean
gitpan-cpan-version:      v1.0.6
gitpan-cpan-path:         CMS/Attribute-Boolean-v1.0.6.tar.gz
gitpan-cpan-author:       CMS
gitpan-cpan-maturity:     released

--- a/README
+++ b/README
@@ -2,11 +2,11 @@ NAME
     Attribute::Boolean - Mark scalars as pure booleans
 
 VERSION
-    Version v1.0.2
+    Version v1.0.6
 
 SYNOPSYS
     This allows you to flag a variable as a boolean. In numeric context, it
-    will have the value 0 or 1. In string context is will have the falue
+    will have the value 0 or 1. In string context is will have the value
     "false" or "true". In JSON, it will correctly return false or true
     values.
 
@@ -30,8 +30,8 @@ USAGE
 
         my $bool : Boolean = true;
 
-    If any perl true value is assigned, the variable is true, if any perl
-    false value assigned, the variable is false.
+    If any perl true value is assigned, the variable is true; if a perl
+    false value is assigned, the variable is false.
 
   true
     This returns 1 in numeric context, "true" in string context.
@@ -40,8 +40,8 @@ USAGE
     This returns 0 in numeric context, "false" in string context.
 
   TO_JSON
-    Provided that allow_blessed is set on the JSON (or JSON::XS) object, the
-    variable will correctly convert to JSON true or false.
+    Provided that convert_blessed is set on the JSON (or JSON::XS) object,
+    the variable will correctly convert to JSON true or false.
 
         my $json = new JSON;
         $json->pretty->convert_blessed;
@@ -54,14 +54,14 @@ USAGE
                                         #     "value" : false,
                                         #     "me"    : true
                                         # }
-                                    
+
 AUTHOR
-    Cliff Stanford, `<cpan@may.be>'
+    Cliff Stanford, "<cpan@may.be>"
 
 BUGS
-    Please report any bugs or feature requests to `bug-attribute-boolean+ at
-    rt.cpan.org', or through the web interface at
-    http://rt.cpan.org/NoAuth/ReportBug.html?Queue=attribute-boolean+. I
+    Please report any bugs or feature requests to "bug-attribute-boolean+ at
+    rt.cpan.org", or through the web interface at
+    <http://rt.cpan.org/NoAuth/ReportBug.html?Queue=attribute-boolean+>. I
     will be notified, and then you'll automatically be notified of progress
     on your bug as I make changes.
 
@@ -71,10 +71,10 @@ SUPPORT
         perldoc Attribute::Boolean
 
 ACKNOWLEDGEMENTS
-    Alan Haggai Alavi `<alanhaggai@alanhaggai.org>' for his Scalar::Boolean
-    module Scalar::Boolean which was the inspiration for this module.
+    Alan Haggai Alavi "<alanhaggai@alanhaggai.org>" for his Scalar::Boolean
+    module which was the inspiration for this module.
 
-LICENSE AND COPYRIGHT
+LICENCE AND COPYRIGHT
     Copyright 2014 Cliff Stanford.
 
     This program is free software; you can redistribute it and/or modify it
